7-ui/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
